kubernetes-manifests/catalog-reader.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-reader
spec:
  selector:
    matchLabels:
      app: catalog-reader
  template:
    metadata:
      labels:
        app: catalog-reader
    spec:
      containers:
      - name: server
        image: catalog-reader # This will be replaced by the CI/CD pipeline
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-reader
spec:
  type: ClusterIP
  selector:
    app: catalog-reader
  ports:
  - name: http
    port: 80
    targetPort: 8080
